--- a/WebTemperatureLogger/Html/Chart_1.html
+++ b/WebTemperatureLogger/Html/Chart_1.html
@@ -1,106 +1,169 @@
 
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
   <title>SVG Graphs example</title>
-
   <style type='text/css'>
   body {
-    background-color: #b2e9e4;
+    background-color: #ffffff;
   }
-
   svg.graph {
     height: 500px;
-    width: 800px;
+    width: 1100px;
   }
-
   svg.graph .grid {
     stroke: white;
     stroke-dasharray: 1 2;
     stroke-width: 1;
   }
-
   svg.graph .points {
     stroke: white;
     stroke-width: 3;
   }
   svg.graph .first_set {
-    fill: #00554d;
+    fill: #000000;
   }
-
   svg.graph .surfaces {
     fill-opacity: 0.5;
   }
-
   svg.graph .grid.double {
     stroke-opacity: 0.4;
   }
-
   svg.graph .labels {
     font-family: Arial;
     font-size: 14px;
     kerning: 1;
   }
-
   svg.graph .labels.x-labels {
     text-anchor: middle;
   }
-
   svg.graph .labels.y-labels {
     text-anchor: end;
   }
   </style>
-
 </head>
-
 <body>
   <svg class='graph' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns='http://www.w3.org/2000/svg'>
     <g class='grid x-grid' id='xGrid'>
-      <line x1='113' x2='113' y1='10' y2='380'></line>
-      <line x1='259' x2='259' y1='10' y2='380'></line>
-      <line x1='405' x2='405' y1='10' y2='380'></line>
-      <line x1='551' x2='551' y1='10' y2='380'></line>
-      <line x1='697' x2='697' y1='10' y2='380'></line>
-    </g>
+    <line x1 = '0113' x2 = '0113' y1 = '10' y2 = '380'></line>
+<line x1 = '0163' x2 = '0163' y1 = '10' y2 = '380'></line>
+<line x1 = '0213' x2 = '0213' y1 = '10' y2 = '380'></line>
+<line x1 = '0263' x2 = '0263' y1 = '10' y2 = '380'></line>
+<line x1 = '0313' x2 = '0313' y1 = '10' y2 = '380'></line>
+<line x1 = '0363' x2 = '0363' y1 = '10' y2 = '380'></line>
+<line x1 = '0413' x2 = '0413' y1 = '10' y2 = '380'></line>
+<line x1 = '0463' x2 = '0463' y1 = '10' y2 = '380'></line>
+<line x1 = '0513' x2 = '0513' y1 = '10' y2 = '380'></line>
+<line x1 = '0563' x2 = '0563' y1 = '10' y2 = '380'></line>
+<line x1 = '0613' x2 = '0613' y1 = '10' y2 = '380'></line>
+<line x1 = '0663' x2 = '0663' y1 = '10' y2 = '380'></line>
+<line x1 = '0713' x2 = '0713' y1 = '10' y2 = '380'></line>
+<line x1 = '0763' x2 = '0763' y1 = '10' y2 = '380'></line>
+<line x1 = '0813' x2 = '0813' y1 = '10' y2 = '380'></line>
+<line x1 = '0863' x2 = '0863' y1 = '10' y2 = '380'></line>
+<line x1 = '0913' x2 = '0913' y1 = '10' y2 = '380'></line>
+<line x1 = '0963' x2 = '0963' y1 = '10' y2 = '380'></line>
+<line x1 = '1013' x2 = '1013' y1 = '10' y2 = '380'></line>
+<line x1 = '1063' x2 = '1063' y1 = '10' y2 = '380'></line>
+AL_LINES    </g>
     <g class='grid y-grid' id='yGrid'>
-      <line x1='86' x2='697' y1='10' y2='10'></line>
-      <line x1='86' x2='697' y1='68' y2='68'></line>
-      <line x1='86' x2='697' y1='126' y2='126'></line>
-      <line x1='86' x2='697' y1='185' y2='185'></line>
-      <line x1='86' x2='697' y1='243' y2='243'></line>
-      <line x1='86' x2='697' y1='301' y2='301'></line>
-      <line x1='86' x2='697' y1='360' y2='360'></line>
+    <line x1 = '86' x2 = '1063' y1 = '0040' y2 = '0040'></line>
+<line x1 = '86' x2 = '1063' y1 = '0070' y2 = '0070'></line>
+<line x1 = '86' x2 = '1063' y1 = '0100' y2 = '0100'></line>
+<line x1 = '86' x2 = '1063' y1 = '0130' y2 = '0130'></line>
+<line x1 = '86' x2 = '1063' y1 = '0160' y2 = '0160'></line>
+<line x1 = '86' x2 = '1063' y1 = '0190' y2 = '0190'></line>
+<line x1 = '86' x2 = '1063' y1 = '0220' y2 = '0220'></line>
+<line x1 = '86' x2 = '1063' y1 = '0250' y2 = '0250'></line>
+<line x1 = '86' x2 = '1063' y1 = '0280' y2 = '0280'></line>
+<line x1 = '86' x2 = '1063' y1 = '0310' y2 = '0310'></line>
+<line x1 = '86' x2 = '1063' y1 = '0340' y2 = '0340'></line>
+<line x1 = '86' x2 = '1063' y1 = '0370' y2 = '0370'></line>
     </g>
-
-
     <g class='surfaces'>
-        <path class='first_set' d='M113,360 L113,192 L259,171 L405,179 L551,200 L697,204 L697,360 Z'></path>
+        <path class='first_set' d='M0113, 0360
+L0113, 0040
+L0163, 0055
+L0213, 0070
+L0263, 0085
+L0313, 0100
+L0363, 0115
+L0413, 0130
+L0463, 0145
+L0513, 0160
+L0563, 0175
+L0613, 0190
+L0663, 0205
+L0713, 0220
+L0763, 0235
+L0813, 0250
+L0863, 0265
+L0913, 0280
+L0963, 0295
+L1013, 0310
+L1063, 0325
+L1063, 0360
+ Z'></path>
     </g>
-
     <use class='grid double' xlink:href='#xGrid' style=''></use>
     <use class='grid double' xlink:href='#yGrid' style=''></use>
-
     <g class='first_set points' data-setname='Our first data set'>
-      <circle cx='113' cy='192' data-value='7.2' r='5'></circle>
-      <circle cx='259' cy='171' data-value='8.1' r='5'></circle>
-      <circle cx='405' cy='179' data-value='7.7' r='5'></circle>
-      <circle cx='551' cy='200' data-value='6.8' r='5'></circle>
-      <circle cx='697' cy='204' data-value='6.7' r='5'></circle>
+    <circle cx='0113' cy='0040' data-value='7.2' r='5'></circle>
+<circle cx='0163' cy='0055' data-value='7.2' r='5'></circle>
+<circle cx='0213' cy='0070' data-value='7.2' r='5'></circle>
+<circle cx='0263' cy='0085' data-value='7.2' r='5'></circle>
+<circle cx='0313' cy='0100' data-value='7.2' r='5'></circle>
+<circle cx='0363' cy='0115' data-value='7.2' r='5'></circle>
+<circle cx='0413' cy='0130' data-value='7.2' r='5'></circle>
+<circle cx='0463' cy='0145' data-value='7.2' r='5'></circle>
+<circle cx='0513' cy='0160' data-value='7.2' r='5'></circle>
+<circle cx='0563' cy='0175' data-value='7.2' r='5'></circle>
+<circle cx='0613' cy='0190' data-value='7.2' r='5'></circle>
+<circle cx='0663' cy='0205' data-value='7.2' r='5'></circle>
+<circle cx='0713' cy='0220' data-value='7.2' r='5'></circle>
+<circle cx='0763' cy='0235' data-value='7.2' r='5'></circle>
+<circle cx='0813' cy='0250' data-value='7.2' r='5'></circle>
+<circle cx='0863' cy='0265' data-value='7.2' r='5'></circle>
+<circle cx='0913' cy='0280' data-value='7.2' r='5'></circle>
+<circle cx='0963' cy='0295' data-value='7.2' r='5'></circle>
+<circle cx='1013' cy='0310' data-value='7.2' r='5'></circle>
+<circle cx='1063' cy='0325' data-value='7.2' r='5'></circle>
     </g>
-
-
     <g class='labels x-labels'>
-        <text x='113' y='400'>2008</text>
-        <text x='259' y='400'>2009</text>
-        <text x='405' y='400'>2010</text>
-        <text x='551' y='400'>2011</text>
-        <text x='697' y='400'>2012</text>
+    <text x='0113' y='400'>01</text>
+<text x='0163' y='400'>02</text>
+<text x='0213' y='400'>03</text>
+<text x='0263' y='400'>04</text>
+<text x='0313' y='400'>05</text>
+<text x='0363' y='400'>06</text>
+<text x='0413' y='400'>07</text>
+<text x='0463' y='400'>08</text>
+<text x='0513' y='400'>09</text>
+<text x='0563' y='400'>10</text>
+<text x='0613' y='400'>11</text>
+<text x='0663' y='400'>12</text>
+<text x='0713' y='400'>13</text>
+<text x='0763' y='400'>14</text>
+<text x='0813' y='400'>15</text>
+<text x='0863' y='400'>16</text>
+<text x='0913' y='400'>17</text>
+<text x='0963' y='400'>18</text>
+<text x='1013' y='400'>19</text>
+<text x='1063' y='400'>20</text>
     </g>
     <g class='labels y-labels'>
-        <text x='80' y='15'>15</text>
-        <text x='80' y='131'>10</text>
-        <text x='80' y='248'>5</text>
-        <text x='80' y='365'>0</text>
-        <text x='50' y='15'>Weeks</text>
+    <text x='0080' y='0045'>080</text>
+<text x='0080' y='0075'>070</text>
+<text x='0080' y='0105'>060</text>
+<text x='0080' y='0135'>050</text>
+<text x='0080' y='0165'>040</text>
+<text x='0080' y='0195'>030</text>
+<text x='0080' y='0225'>020</text>
+<text x='0080' y='0255'>010</text>
+<text x='0080' y='0285'>000</text>
+<text x='0080' y='0315'>-10</text>
+<text x='0080' y='0345'>-20</text>
+<text x='0080' y='0375'>-30</text>
     </g>
   </svg>
 </body>
