--- a/WebTemperatureLogger/Html/Chart_1.html
+++ b/WebTemperatureLogger/Html/Chart_1.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-  <title>SVG Graphs example</title>
+  <title>Temperature</title>
   <style type='text/css'>
   body {
-    background-color: #ffffff;
+    background-color: #b8b8b8;
   }
   svg.graph {
     height: 500px;
@@ -65,7 +65,7 @@
 <line x1 = '0963' x2 = '0963' y1 = '10' y2 = '380'></line>
 <line x1 = '1013' x2 = '1013' y1 = '10' y2 = '380'></line>
 <line x1 = '1063' x2 = '1063' y1 = '10' y2 = '380'></line>
-AL_LINES    </g>
+    </g>
     <g class='grid y-grid' id='yGrid'>
     <line x1 = '86' x2 = '1063' y1 = '0040' y2 = '0040'></line>
 <line x1 = '86' x2 = '1063' y1 = '0070' y2 = '0070'></line>
@@ -81,53 +81,53 @@ AL_LINES    </g>
 <line x1 = '86' x2 = '1063' y1 = '0370' y2 = '0370'></line>
     </g>
     <g class='surfaces'>
-        <path class='first_set' d='M0113, 0360
-L0113, 0040
-L0163, 0055
-L0213, 0070
-L0263, 0085
-L0313, 0100
-L0363, 0115
-L0413, 0130
-L0463, 0145
+        <path class='first_set' d='M0113, 0370
+L0113, 0280
+L0163, 0160
+L0213, 0100
+L0263, 0280
+L0313, 0190
+L0363, 0220
+L0413, 0100
+L0463, 0010
 L0513, 0160
-L0563, 0175
+L0563, 0250
 L0613, 0190
-L0663, 0205
-L0713, 0220
-L0763, 0235
-L0813, 0250
-L0863, 0265
-L0913, 0280
-L0963, 0295
-L1013, 0310
-L1063, 0325
-L1063, 0360
+L0663, 0070
+L0713, 0040
+L0763, 0040
+L0813, 0190
+L0863, 0040
+L0913, 0250
+L0963, 0130
+L1013, 0190
+L1063, 0130
+L1063, 0370
  Z'></path>
     </g>
     <use class='grid double' xlink:href='#xGrid' style=''></use>
     <use class='grid double' xlink:href='#yGrid' style=''></use>
     <g class='first_set points' data-setname='Our first data set'>
-    <circle cx='0113' cy='0040' data-value='7.2' r='5'></circle>
-<circle cx='0163' cy='0055' data-value='7.2' r='5'></circle>
-<circle cx='0213' cy='0070' data-value='7.2' r='5'></circle>
-<circle cx='0263' cy='0085' data-value='7.2' r='5'></circle>
-<circle cx='0313' cy='0100' data-value='7.2' r='5'></circle>
-<circle cx='0363' cy='0115' data-value='7.2' r='5'></circle>
-<circle cx='0413' cy='0130' data-value='7.2' r='5'></circle>
-<circle cx='0463' cy='0145' data-value='7.2' r='5'></circle>
+    <circle cx='0113' cy='0280' data-value='7.2' r='5'></circle>
+<circle cx='0163' cy='0160' data-value='7.2' r='5'></circle>
+<circle cx='0213' cy='0100' data-value='7.2' r='5'></circle>
+<circle cx='0263' cy='0280' data-value='7.2' r='5'></circle>
+<circle cx='0313' cy='0190' data-value='7.2' r='5'></circle>
+<circle cx='0363' cy='0220' data-value='7.2' r='5'></circle>
+<circle cx='0413' cy='0100' data-value='7.2' r='5'></circle>
+<circle cx='0463' cy='0010' data-value='7.2' r='5'></circle>
 <circle cx='0513' cy='0160' data-value='7.2' r='5'></circle>
-<circle cx='0563' cy='0175' data-value='7.2' r='5'></circle>
+<circle cx='0563' cy='0250' data-value='7.2' r='5'></circle>
 <circle cx='0613' cy='0190' data-value='7.2' r='5'></circle>
-<circle cx='0663' cy='0205' data-value='7.2' r='5'></circle>
-<circle cx='0713' cy='0220' data-value='7.2' r='5'></circle>
-<circle cx='0763' cy='0235' data-value='7.2' r='5'></circle>
-<circle cx='0813' cy='0250' data-value='7.2' r='5'></circle>
-<circle cx='0863' cy='0265' data-value='7.2' r='5'></circle>
-<circle cx='0913' cy='0280' data-value='7.2' r='5'></circle>
-<circle cx='0963' cy='0295' data-value='7.2' r='5'></circle>
-<circle cx='1013' cy='0310' data-value='7.2' r='5'></circle>
-<circle cx='1063' cy='0325' data-value='7.2' r='5'></circle>
+<circle cx='0663' cy='0070' data-value='7.2' r='5'></circle>
+<circle cx='0713' cy='0040' data-value='7.2' r='5'></circle>
+<circle cx='0763' cy='0040' data-value='7.2' r='5'></circle>
+<circle cx='0813' cy='0190' data-value='7.2' r='5'></circle>
+<circle cx='0863' cy='0040' data-value='7.2' r='5'></circle>
+<circle cx='0913' cy='0250' data-value='7.2' r='5'></circle>
+<circle cx='0963' cy='0130' data-value='7.2' r='5'></circle>
+<circle cx='1013' cy='0190' data-value='7.2' r='5'></circle>
+<circle cx='1063' cy='0130' data-value='7.2' r='5'></circle>
     </g>
     <g class='labels x-labels'>
     <text x='0113' y='400'>01</text>
@@ -166,5 +166,9 @@ L1063, 0360
 <text x='0080' y='0375'>-30</text>
     </g>
   </svg>
+  <form>
+    <input name="SUB" value="Start Log" type="submit">
+    <input name="SUB" value="Stopp Log" type="submit">
+    <input name="OUT" type="checkbox" >  </form>
 </body>
 </html>
