--- a/WebTemperatureLogger/Html/Chart_1.html
+++ b/WebTemperatureLogger/Html/Chart_1.html
@@ -45,130 +45,147 @@
 <body>
   <svg class='graph' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns='http://www.w3.org/2000/svg'>
     <g class='grid x-grid' id='xGrid'>
-    <line x1 = '0113' x2 = '0113' y1 = '10' y2 = '380'></line>
-<line x1 = '0163' x2 = '0163' y1 = '10' y2 = '380'></line>
-<line x1 = '0213' x2 = '0213' y1 = '10' y2 = '380'></line>
-<line x1 = '0263' x2 = '0263' y1 = '10' y2 = '380'></line>
-<line x1 = '0313' x2 = '0313' y1 = '10' y2 = '380'></line>
-<line x1 = '0363' x2 = '0363' y1 = '10' y2 = '380'></line>
-<line x1 = '0413' x2 = '0413' y1 = '10' y2 = '380'></line>
-<line x1 = '0463' x2 = '0463' y1 = '10' y2 = '380'></line>
-<line x1 = '0513' x2 = '0513' y1 = '10' y2 = '380'></line>
-<line x1 = '0563' x2 = '0563' y1 = '10' y2 = '380'></line>
-<line x1 = '0613' x2 = '0613' y1 = '10' y2 = '380'></line>
-<line x1 = '0663' x2 = '0663' y1 = '10' y2 = '380'></line>
-<line x1 = '0713' x2 = '0713' y1 = '10' y2 = '380'></line>
-<line x1 = '0763' x2 = '0763' y1 = '10' y2 = '380'></line>
-<line x1 = '0813' x2 = '0813' y1 = '10' y2 = '380'></line>
-<line x1 = '0863' x2 = '0863' y1 = '10' y2 = '380'></line>
-<line x1 = '0913' x2 = '0913' y1 = '10' y2 = '380'></line>
-<line x1 = '0963' x2 = '0963' y1 = '10' y2 = '380'></line>
-<line x1 = '1013' x2 = '1013' y1 = '10' y2 = '380'></line>
-<line x1 = '1063' x2 = '1063' y1 = '10' y2 = '380'></line>
+    <line x1 = '0100' x2 = '0100' y1 = '10' y2 = '380'></line>
+<line x1 = '0125' x2 = '0125' y1 = '10' y2 = '380'></line>
+<line x1 = '0150' x2 = '0150' y1 = '10' y2 = '380'></line>
+<line x1 = '0175' x2 = '0175' y1 = '10' y2 = '380'></line>
+<line x1 = '0200' x2 = '0200' y1 = '10' y2 = '380'></line>
+<line x1 = '0225' x2 = '0225' y1 = '10' y2 = '380'></line>
+<line x1 = '0250' x2 = '0250' y1 = '10' y2 = '380'></line>
+<line x1 = '0275' x2 = '0275' y1 = '10' y2 = '380'></line>
+<line x1 = '0300' x2 = '0300' y1 = '10' y2 = '380'></line>
+<line x1 = '0325' x2 = '0325' y1 = '10' y2 = '380'></line>
+<line x1 = '0350' x2 = '0350' y1 = '10' y2 = '380'></line>
+<line x1 = '0375' x2 = '0375' y1 = '10' y2 = '380'></line>
+<line x1 = '0400' x2 = '0400' y1 = '10' y2 = '380'></line>
+<line x1 = '0425' x2 = '0425' y1 = '10' y2 = '380'></line>
+<line x1 = '0450' x2 = '0450' y1 = '10' y2 = '380'></line>
+<line x1 = '0475' x2 = '0475' y1 = '10' y2 = '380'></line>
+<line x1 = '0500' x2 = '0500' y1 = '10' y2 = '380'></line>
+<line x1 = '0525' x2 = '0525' y1 = '10' y2 = '380'></line>
+<line x1 = '0550' x2 = '0550' y1 = '10' y2 = '380'></line>
+<line x1 = '0575' x2 = '0575' y1 = '10' y2 = '380'></line>
     </g>
     <g class='grid y-grid' id='yGrid'>
-    <line x1 = '86' x2 = '1063' y1 = '0040' y2 = '0040'></line>
-<line x1 = '86' x2 = '1063' y1 = '0070' y2 = '0070'></line>
-<line x1 = '86' x2 = '1063' y1 = '0100' y2 = '0100'></line>
-<line x1 = '86' x2 = '1063' y1 = '0130' y2 = '0130'></line>
-<line x1 = '86' x2 = '1063' y1 = '0160' y2 = '0160'></line>
-<line x1 = '86' x2 = '1063' y1 = '0190' y2 = '0190'></line>
-<line x1 = '86' x2 = '1063' y1 = '0220' y2 = '0220'></line>
-<line x1 = '86' x2 = '1063' y1 = '0250' y2 = '0250'></line>
-<line x1 = '86' x2 = '1063' y1 = '0280' y2 = '0280'></line>
-<line x1 = '86' x2 = '1063' y1 = '0310' y2 = '0310'></line>
-<line x1 = '86' x2 = '1063' y1 = '0340' y2 = '0340'></line>
-<line x1 = '86' x2 = '1063' y1 = '0370' y2 = '0370'></line>
+    <line x1 = '86' x2 = '0600' y1 = '0050' y2 = '0050'></line>
+<line x1 = '86' x2 = '0600' y1 = '0075' y2 = '0075'></line>
+<line x1 = '86' x2 = '0600' y1 = '0100' y2 = '0100'></line>
+<line x1 = '86' x2 = '0600' y1 = '0125' y2 = '0125'></line>
+<line x1 = '86' x2 = '0600' y1 = '0150' y2 = '0150'></line>
+<line x1 = '86' x2 = '0600' y1 = '0175' y2 = '0175'></line>
+<line x1 = '86' x2 = '0600' y1 = '0200' y2 = '0200'></line>
+<line x1 = '86' x2 = '0600' y1 = '0225' y2 = '0225'></line>
+<line x1 = '86' x2 = '0600' y1 = '0250' y2 = '0250'></line>
+<line x1 = '86' x2 = '0600' y1 = '0275' y2 = '0275'></line>
+<line x1 = '86' x2 = '0600' y1 = '0300' y2 = '0300'></line>
+<line x1 = '86' x2 = '0600' y1 = '0325' y2 = '0325'></line>
     </g>
     <g class='surfaces'>
-        <path class='first_set' d='M0113, 0370
-L0113, 0280
-L0163, 0160
-L0213, 0100
-L0263, 0280
-L0313, 0190
-L0363, 0220
-L0413, 0100
-L0463, 0010
-L0513, 0160
-L0563, 0250
-L0613, 0190
-L0663, 0070
-L0713, 0040
-L0763, 0040
-L0813, 0190
-L0863, 0040
-L0913, 0250
-L0963, 0130
-L1013, 0190
-L1063, 0130
-L1063, 0370
+        <path class='first_set' d='M0100, 0350
+L0100, 0220
+L0125, 0160
+L0150, 0040
+L0175, 0190
+L0200, 0010
+L0225, 0280
+L0250, 0130
+L0275, 0220
+L0300, 0220
+L0325, 0070
+L0350, 0190
+L0375, 0070
+L0400, 0010
+L0425, 0280
+L0450, 0220
+L0475, 0190
+L0500, 0010
+L0525, 0010
+L0550, 0070
+L0575, 0280
+L0600, 0350
  Z'></path>
     </g>
     <use class='grid double' xlink:href='#xGrid' style=''></use>
     <use class='grid double' xlink:href='#yGrid' style=''></use>
     <g class='first_set points' data-setname='Our first data set'>
-    <circle cx='0113' cy='0280' data-value='7.2' r='5'></circle>
-<circle cx='0163' cy='0160' data-value='7.2' r='5'></circle>
-<circle cx='0213' cy='0100' data-value='7.2' r='5'></circle>
-<circle cx='0263' cy='0280' data-value='7.2' r='5'></circle>
-<circle cx='0313' cy='0190' data-value='7.2' r='5'></circle>
-<circle cx='0363' cy='0220' data-value='7.2' r='5'></circle>
-<circle cx='0413' cy='0100' data-value='7.2' r='5'></circle>
-<circle cx='0463' cy='0010' data-value='7.2' r='5'></circle>
-<circle cx='0513' cy='0160' data-value='7.2' r='5'></circle>
-<circle cx='0563' cy='0250' data-value='7.2' r='5'></circle>
-<circle cx='0613' cy='0190' data-value='7.2' r='5'></circle>
-<circle cx='0663' cy='0070' data-value='7.2' r='5'></circle>
-<circle cx='0713' cy='0040' data-value='7.2' r='5'></circle>
-<circle cx='0763' cy='0040' data-value='7.2' r='5'></circle>
-<circle cx='0813' cy='0190' data-value='7.2' r='5'></circle>
-<circle cx='0863' cy='0040' data-value='7.2' r='5'></circle>
-<circle cx='0913' cy='0250' data-value='7.2' r='5'></circle>
-<circle cx='0963' cy='0130' data-value='7.2' r='5'></circle>
-<circle cx='1013' cy='0190' data-value='7.2' r='5'></circle>
-<circle cx='1063' cy='0130' data-value='7.2' r='5'></circle>
+    <circle cx='0100' cy='0220' data-value='7.2' r='5'></circle>
+<circle cx='0125' cy='0160' data-value='7.2' r='5'></circle>
+<circle cx='0150' cy='0040' data-value='7.2' r='5'></circle>
+<circle cx='0175' cy='0190' data-value='7.2' r='5'></circle>
+<circle cx='0200' cy='0010' data-value='7.2' r='5'></circle>
+<circle cx='0225' cy='0280' data-value='7.2' r='5'></circle>
+<circle cx='0250' cy='0130' data-value='7.2' r='5'></circle>
+<circle cx='0275' cy='0220' data-value='7.2' r='5'></circle>
+<circle cx='0300' cy='0220' data-value='7.2' r='5'></circle>
+<circle cx='0325' cy='0070' data-value='7.2' r='5'></circle>
+<circle cx='0350' cy='0190' data-value='7.2' r='5'></circle>
+<circle cx='0375' cy='0070' data-value='7.2' r='5'></circle>
+<circle cx='0400' cy='0010' data-value='7.2' r='5'></circle>
+<circle cx='0425' cy='0280' data-value='7.2' r='5'></circle>
+<circle cx='0450' cy='0220' data-value='7.2' r='5'></circle>
+<circle cx='0475' cy='0190' data-value='7.2' r='5'></circle>
+<circle cx='0500' cy='0010' data-value='7.2' r='5'></circle>
+<circle cx='0525' cy='0010' data-value='7.2' r='5'></circle>
+<circle cx='0550' cy='0070' data-value='7.2' r='5'></circle>
+<circle cx='0575' cy='0280' data-value='7.2' r='5'></circle>
     </g>
     <g class='labels x-labels'>
-    <text x='0113' y='400'>01</text>
-<text x='0163' y='400'>02</text>
-<text x='0213' y='400'>03</text>
-<text x='0263' y='400'>04</text>
-<text x='0313' y='400'>05</text>
-<text x='0363' y='400'>06</text>
-<text x='0413' y='400'>07</text>
-<text x='0463' y='400'>08</text>
-<text x='0513' y='400'>09</text>
-<text x='0563' y='400'>10</text>
-<text x='0613' y='400'>11</text>
-<text x='0663' y='400'>12</text>
-<text x='0713' y='400'>13</text>
-<text x='0763' y='400'>14</text>
-<text x='0813' y='400'>15</text>
-<text x='0863' y='400'>16</text>
-<text x='0913' y='400'>17</text>
-<text x='0963' y='400'>18</text>
-<text x='1013' y='400'>19</text>
-<text x='1063' y='400'>20</text>
+    <text x='0100' y='400'>01</text>
+<text x='0125' y='400'>02</text>
+<text x='0150' y='400'>03</text>
+<text x='0175' y='400'>04</text>
+<text x='0200' y='400'>05</text>
+<text x='0225' y='400'>06</text>
+<text x='0250' y='400'>07</text>
+<text x='0275' y='400'>08</text>
+<text x='0300' y='400'>09</text>
+<text x='0325' y='400'>10</text>
+<text x='0350' y='400'>11</text>
+<text x='0375' y='400'>12</text>
+<text x='0400' y='400'>13</text>
+<text x='0425' y='400'>14</text>
+<text x='0450' y='400'>15</text>
+<text x='0475' y='400'>16</text>
+<text x='0500' y='400'>17</text>
+<text x='0525' y='400'>18</text>
+<text x='0550' y='400'>19</text>
+<text x='0575' y='400'>20</text>
     </g>
     <g class='labels y-labels'>
-    <text x='0080' y='0045'>080</text>
-<text x='0080' y='0075'>070</text>
+    <text x='0080' y='0055'>080</text>
+<text x='0080' y='0080'>070</text>
 <text x='0080' y='0105'>060</text>
-<text x='0080' y='0135'>050</text>
-<text x='0080' y='0165'>040</text>
-<text x='0080' y='0195'>030</text>
-<text x='0080' y='0225'>020</text>
-<text x='0080' y='0255'>010</text>
-<text x='0080' y='0285'>000</text>
-<text x='0080' y='0315'>-10</text>
-<text x='0080' y='0345'>-20</text>
-<text x='0080' y='0375'>-30</text>
+<text x='0080' y='0130'>050</text>
+<text x='0080' y='0155'>040</text>
+<text x='0080' y='0180'>030</text>
+<text x='0080' y='0205'>020</text>
+<text x='0080' y='0230'>010</text>
+<text x='0080' y='0255'>000</text>
+<text x='0080' y='0280'>-10</text>
+<text x='0080' y='0305'>-20</text>
+<text x='0080' y='0330'>-30</text>
     </g>
   </svg>
-  <form>
+  <form method = 'get' action='file.txt'>
+    <p/>
     <input name="SUB" value="Start Log" type="submit">
     <input name="SUB" value="Stopp Log" type="submit">
-    <input name="OUT" type="checkbox" >  </form>
+    <input name="OUT" type="radio" value="C">    <p/>
+    <select name='download' size='5' style='width: 300px'>
+      <option>0000.csv</option>
+<option>0001.csv</option>
+<option>0002.csv</option>
+<option>0003.csv</option>
+<option>0004.csv</option>
+<option>0005.csv</option>
+<option>0006.csv</option>
+<option>0007.csv</option>
+<option>0008.csv</option>
+<option>0009.csv</option>
+
+    </select>
+    <p/>
+    <input name="SUB" value="DownLoad" type="submit" >
+  </form>
 </body>
 </html>
