--- a/WebTemperatureLogger/Html/Chart_1.html
+++ b/WebTemperatureLogger/Html/Chart_1.html
@@ -3,189 +3,297 @@
 <html>
 <head>
   <title>Temperature</title>
-  <style type='text/css'>
-  body {
-    background-color: #b8b8b8;
-  }
-  svg.graph {
-    height: 500px;
-    width: 1100px;
-  }
-  svg.graph .grid {
-    stroke: white;
-    stroke-dasharray: 1 2;
-    stroke-width: 1;
-  }
-  svg.graph .points {
-    stroke: white;
-    stroke-width: 3;
-  }
-  svg.graph .first_set {
-    fill: #000000;
-  }
-  svg.graph .surfaces {
-    fill-opacity: 0.5;
-  }
-  svg.graph .grid.double {
-    stroke-opacity: 0.4;
-  }
-  svg.graph .labels {
-    font-family: Arial;
-    font-size: 14px;
-    kerning: 1;
-  }
-  svg.graph .labels.x-labels {
-    text-anchor: middle;
-  }
-  svg.graph .labels.y-labels {
-    text-anchor: end;
-  }
+<script>
+	var data = [300,300,300,300,300,300,300,300,300,300,300,300,300,300,300,300,300,300,300,300,300];
+	
+	function Init()
+	{		
+		IntervalComboInit();
+		GetTemperature();
+	}
+	
+	function GetTemperature()
+	{
+		var path = document.getElementById("path");
+		
+		var x = ("0000" + 20).slice(-4);
+		
+		for(var i = 0; i < 20; i++) {
+			var circle = document.getElementById("c" + i);			
+			circle.setAttributeNS(null, "cy", data[i]);
+			
+			var segments = path.pathSegList;
+			segments.getItem(i+1).y = parseInt(data[i]);
+		}
+
+
+		data[19] = Math.random() * 100 + 200;
+		
+		for(var i = 0; i < 19; i++) {
+			data[i] = data[i + 1];
+		}
+		
+		setTimeout("GetTemperature()", 3000);
+	}
+	
+	function OnStartLog()
+	{
+		alert("Start");
+	}
+	
+	function OnStoppLog()
+	{
+		alert("Stopp");
+	}
+	
+	function IntervalComboInit()
+	{
+		var intervalInputBox = document.getElementById("intervalInput");
+		var intervalComboBox = document.getElementById("intervalCombo");
+		var idx = intervalComboBox.selectedIndex;
+		var content = intervalComboBox.options[idx].value;
+		if(intervalInputBox.value == "")
+			intervalInputBox.value = content;	
+	}
+
+	function IntervalComboOnChange(intervalComboBox, intervalInputBox)
+	{
+		intervalInputBox = document.getElementById(intervalInputBox);  
+		var idx = intervalComboBox.selectedIndex;
+		var content = intervalComboBox.options[idx].value;
+		intervalInputBox.value = content;	
+	}
+</script>
+  <style type="text/css">
+	  body {
+	    background-color: #b8b8b8;
+	  }
+	  svg.graph {	    
+	    height: 400px;
+	    width: 600px;
+	  }
+	  svg.graph .grid {
+	    stroke: white;
+	    stroke-dasharray: 1 2;
+	    stroke-width: 1;
+	  }
+	  svg.graph .points {
+	    stroke: white;
+	    stroke-width: 3;
+	  }
+	  svg.graph .first_set {
+	    fill: #000000;
+	  }
+	  svg.graph .surfaces {
+	    fill-opacity: 0.5;
+	  }
+	  svg.graph .grid.double {
+	    stroke-opacity: 0.4;
+	  }
+	  svg.graph .labels {
+	    font-family: Arial;
+	    font-size: 14px;
+	    kerning: 1;
+	  }
+	  svg.graph .labels.x-labels {
+	    text-anchor: middle;
+	  }
+	  svg.graph .labels.y-labels {
+	    text-anchor: end;
+	  }
+
+	fieldset {
+		padding-top:10px;
+		padding-bottom:10px;
+		font-family: Arial;
+		font-size: 12px;
+		kerning: 1;
+		width: 600px;
+		border:1px solid #666;
+		border-radius:4px;		    
+	}
+		
+		
   </style>
 </head>
-<body>
-  <svg class='graph' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns='http://www.w3.org/2000/svg'>
-    <g class='grid x-grid' id='xGrid'>
-    <line x1 = '0100' x2 = '0100' y1 = '10' y2 = '380'></line>
-<line x1 = '0125' x2 = '0125' y1 = '10' y2 = '380'></line>
-<line x1 = '0150' x2 = '0150' y1 = '10' y2 = '380'></line>
-<line x1 = '0175' x2 = '0175' y1 = '10' y2 = '380'></line>
-<line x1 = '0200' x2 = '0200' y1 = '10' y2 = '380'></line>
-<line x1 = '0225' x2 = '0225' y1 = '10' y2 = '380'></line>
-<line x1 = '0250' x2 = '0250' y1 = '10' y2 = '380'></line>
-<line x1 = '0275' x2 = '0275' y1 = '10' y2 = '380'></line>
-<line x1 = '0300' x2 = '0300' y1 = '10' y2 = '380'></line>
-<line x1 = '0325' x2 = '0325' y1 = '10' y2 = '380'></line>
-<line x1 = '0350' x2 = '0350' y1 = '10' y2 = '380'></line>
-<line x1 = '0375' x2 = '0375' y1 = '10' y2 = '380'></line>
-<line x1 = '0400' x2 = '0400' y1 = '10' y2 = '380'></line>
-<line x1 = '0425' x2 = '0425' y1 = '10' y2 = '380'></line>
-<line x1 = '0450' x2 = '0450' y1 = '10' y2 = '380'></line>
-<line x1 = '0475' x2 = '0475' y1 = '10' y2 = '380'></line>
-<line x1 = '0500' x2 = '0500' y1 = '10' y2 = '380'></line>
-<line x1 = '0525' x2 = '0525' y1 = '10' y2 = '380'></line>
-<line x1 = '0550' x2 = '0550' y1 = '10' y2 = '380'></line>
-<line x1 = '0575' x2 = '0575' y1 = '10' y2 = '380'></line>
+<body onload="Init()">
+<fieldset style ="" name="files">
+		<legend>Temperature</legend>
+  <svg id = "temp-graph" class="graph" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
+    <g class="grid x-grid" id="xGrid">
+	<line x1 = "0045" x2 = "0045" y1 = "0025" y2 = "0350"></line>
+	<line x1 = "0100" x2 = "0100" y1 = "0025" y2 = "0350"></line>
+	<line x1 = "0125" x2 = "0125" y1 = "0025" y2 = "0350"></line>
+	<line x1 = "0150" x2 = "0150" y1 = "0025" y2 = "0350"></line>
+	<line x1 = "0175" x2 = "0175" y1 = "0025" y2 = "0350"></line>
+	<line x1 = "0200" x2 = "0200" y1 = "0025" y2 = "0350"></line>
+	<line x1 = "0225" x2 = "0225" y1 = "0025" y2 = "0350"></line>
+	<line x1 = "0250" x2 = "0250" y1 = "0025" y2 = "0350"></line>
+	<line x1 = "0275" x2 = "0275" y1 = "0025" y2 = "0350"></line>
+	<line x1 = "0300" x2 = "0300" y1 = "0025" y2 = "0350"></line>
+	<line x1 = "0325" x2 = "0325" y1 = "0025" y2 = "0350"></line>
+	<line x1 = "0350" x2 = "0350" y1 = "0025" y2 = "0350"></line>
+	<line x1 = "0375" x2 = "0375" y1 = "0025" y2 = "0350"></line>
+	<line x1 = "0400" x2 = "0400" y1 = "0025" y2 = "0350"></line>
+	<line x1 = "0425" x2 = "0425" y1 = "0025" y2 = "0350"></line>
+	<line x1 = "0450" x2 = "0450" y1 = "0025" y2 = "0350"></line>
+	<line x1 = "0475" x2 = "0475" y1 = "0025" y2 = "0350"></line>
+	<line x1 = "0500" x2 = "0500" y1 = "0025" y2 = "0350"></line>
+	<line x1 = "0525" x2 = "0525" y1 = "0025" y2 = "0350"></line>
+	<line x1 = "0550" x2 = "0550" y1 = "0025" y2 = "0350"></line>
+	<line x1 = "0575" x2 = "0575" y1 = "0025" y2 = "0350"></line>
     </g>
-    <g class='grid y-grid' id='yGrid'>
-    <line x1 = '86' x2 = '0600' y1 = '0050' y2 = '0050'></line>
-<line x1 = '86' x2 = '0600' y1 = '0075' y2 = '0075'></line>
-<line x1 = '86' x2 = '0600' y1 = '0100' y2 = '0100'></line>
-<line x1 = '86' x2 = '0600' y1 = '0125' y2 = '0125'></line>
-<line x1 = '86' x2 = '0600' y1 = '0150' y2 = '0150'></line>
-<line x1 = '86' x2 = '0600' y1 = '0175' y2 = '0175'></line>
-<line x1 = '86' x2 = '0600' y1 = '0200' y2 = '0200'></line>
-<line x1 = '86' x2 = '0600' y1 = '0225' y2 = '0225'></line>
-<line x1 = '86' x2 = '0600' y1 = '0250' y2 = '0250'></line>
-<line x1 = '86' x2 = '0600' y1 = '0275' y2 = '0275'></line>
-<line x1 = '86' x2 = '0600' y1 = '0300' y2 = '0300'></line>
-<line x1 = '86' x2 = '0600' y1 = '0325' y2 = '0325'></line>
+    <g class="grid y-grid" id="yGrid">
+	<line x1 = "0045" x2 = "0575" y1 = "0025" y2 = "0025"></line>
+	<line x1 = "0045" x2 = "0575" y1 = "0050" y2 = "0050"></line>
+	<line x1 = "0045" x2 = "0575" y1 = "0075" y2 = "0075"></line>
+	<line x1 = "0045" x2 = "0575" y1 = "0100" y2 = "0100"></line>
+	<line x1 = "0045" x2 = "0575" y1 = "0125" y2 = "0125"></line>
+	<line x1 = "0045" x2 = "0575" y1 = "0150" y2 = "0150"></line>
+	<line x1 = "0045" x2 = "0575" y1 = "0175" y2 = "0175"></line>
+	<line x1 = "0045" x2 = "0575" y1 = "0200" y2 = "0200"></line>
+	<line x1 = "0045" x2 = "0575" y1 = "0225" y2 = "0225"></line>
+	<line x1 = "0045" x2 = "0575" y1 = "0250" y2 = "0250"></line>
+	<line x1 = "0045" x2 = "0575" y1 = "0275" y2 = "0275"></line>
+	<line x1 = "0045" x2 = "0575" y1 = "0300" y2 = "0300"></line>
+	<line x1 = "0045" x2 = "0575" y1 = "0325" y2 = "0325"></line>
+	<line x1 = "0045" x2 = "0575" y1 = "0350" y2 = "0350"></line>
     </g>
-    <g class='surfaces'>
-        <path class='first_set' d='M0100, 0350
-L0100, 0220
-L0125, 0160
-L0150, 0040
-L0175, 0190
-L0200, 0010
-L0225, 0280
-L0250, 0130
-L0275, 0220
-L0300, 0220
-L0325, 0070
-L0350, 0190
-L0375, 0070
-L0400, 0010
-L0425, 0280
-L0450, 0220
-L0475, 0190
-L0500, 0010
-L0525, 0010
-L0550, 0070
-L0575, 0280
-L0600, 0350
- Z'></path>
+    <g class="surfaces">
+        <path id = "path" class="first_set" d="M0100, 0300
+		L0100, 0275
+		L0125, 0125
+		L0150, 0225
+		L0175, 0350
+		L0200, 0100
+		L0225, 0300
+		L0250, 0225
+		L0275, 0125
+		L0300, 0150
+		L0325, 0225
+		L0350, 0150
+		L0375, 0275
+		L0400, 0250
+		L0425, 0225
+		L0450, 0250
+		L0475, 0200
+		L0500, 0350
+		L0525, 0275
+		L0550, 0325
+		L0575, 0175
+		L0575, 0300
+		Z">
+	</path>
     </g>
-    <use class='grid double' xlink:href='#xGrid' style=''></use>
-    <use class='grid double' xlink:href='#yGrid' style=''></use>
-    <g class='first_set points' data-setname='Our first data set'>
-    <circle cx='0100' cy='0220' data-value='7.2' r='5'></circle>
-<circle cx='0125' cy='0160' data-value='7.2' r='5'></circle>
-<circle cx='0150' cy='0040' data-value='7.2' r='5'></circle>
-<circle cx='0175' cy='0190' data-value='7.2' r='5'></circle>
-<circle cx='0200' cy='0010' data-value='7.2' r='5'></circle>
-<circle cx='0225' cy='0280' data-value='7.2' r='5'></circle>
-<circle cx='0250' cy='0130' data-value='7.2' r='5'></circle>
-<circle cx='0275' cy='0220' data-value='7.2' r='5'></circle>
-<circle cx='0300' cy='0220' data-value='7.2' r='5'></circle>
-<circle cx='0325' cy='0070' data-value='7.2' r='5'></circle>
-<circle cx='0350' cy='0190' data-value='7.2' r='5'></circle>
-<circle cx='0375' cy='0070' data-value='7.2' r='5'></circle>
-<circle cx='0400' cy='0010' data-value='7.2' r='5'></circle>
-<circle cx='0425' cy='0280' data-value='7.2' r='5'></circle>
-<circle cx='0450' cy='0220' data-value='7.2' r='5'></circle>
-<circle cx='0475' cy='0190' data-value='7.2' r='5'></circle>
-<circle cx='0500' cy='0010' data-value='7.2' r='5'></circle>
-<circle cx='0525' cy='0010' data-value='7.2' r='5'></circle>
-<circle cx='0550' cy='0070' data-value='7.2' r='5'></circle>
-<circle cx='0575' cy='0280' data-value='7.2' r='5'></circle>
+    <use class="grid double" xlink:href="#xGrid" style=""></use>
+    <use class="grid double" xlink:href="#yGrid" style=""></use>
+    <g class="first_set points" data-setname="Our first data set">
+	<circle id = "c0" cx="0100" cy="0275" data-value="7.2" r="5"></circle>
+	<circle id = "c1" cx="0125" cy="0125" data-value="7.2" r="5"></circle>
+	<circle id = "c2" cx="0150" cy="0225" data-value="7.2" r="5"></circle>
+	<circle id = "c3" cx="0175" cy="0350" data-value="7.2" r="5"></circle>
+	<circle id = "c4" cx="0200" cy="0100" data-value="7.2" r="5"></circle>
+	<circle id = "c5" cx="0225" cy="0300" data-value="7.2" r="5"></circle>
+	<circle id = "c6" cx="0250" cy="0225" data-value="7.2" r="5"></circle>
+	<circle id = "c7" cx="0275" cy="0125" data-value="7.2" r="5"></circle>
+	<circle id = "c8" cx="0300" cy="0150" data-value="7.2" r="5"></circle>
+	<circle id = "c9" cx="0325" cy="0225" data-value="7.2" r="5"></circle>
+	<circle id = "c10" cx="0350" cy="0150" data-value="7.2" r="5"></circle>
+	<circle id = "c11" cx="0375" cy="0275" data-value="7.2" r="5"></circle>
+	<circle id = "c12" cx="0400" cy="0250" data-value="7.2" r="5"></circle>
+	<circle id = "c13" cx="0425" cy="0225" data-value="7.2" r="5"></circle>
+	<circle id = "c14" cx="0450" cy="0250" data-value="7.2" r="5"></circle>
+	<circle id = "c15" cx="0475" cy="0200" data-value="7.2" r="5"></circle>
+	<circle id = "c16" cx="0500" cy="0350" data-value="7.2" r="5"></circle>
+	<circle id = "c17" cx="0525" cy="0275" data-value="7.2" r="5"></circle>
+	<circle id = "c18" cx="0550" cy="0325" data-value="7.2" r="5"></circle>
+	<circle id = "c19" cx="0575" cy="0175" data-value="7.2" r="5"></circle>
     </g>
-    <g class='labels x-labels'>
-    <text x='0100' y='400'>01</text>
-<text x='0125' y='400'>02</text>
-<text x='0150' y='400'>03</text>
-<text x='0175' y='400'>04</text>
-<text x='0200' y='400'>05</text>
-<text x='0225' y='400'>06</text>
-<text x='0250' y='400'>07</text>
-<text x='0275' y='400'>08</text>
-<text x='0300' y='400'>09</text>
-<text x='0325' y='400'>10</text>
-<text x='0350' y='400'>11</text>
-<text x='0375' y='400'>12</text>
-<text x='0400' y='400'>13</text>
-<text x='0425' y='400'>14</text>
-<text x='0450' y='400'>15</text>
-<text x='0475' y='400'>16</text>
-<text x='0500' y='400'>17</text>
-<text x='0525' y='400'>18</text>
-<text x='0550' y='400'>19</text>
-<text x='0575' y='400'>20</text>
+    <g class="labels x-labels">
+	<text x="0100" y="0375">01</text>
+	<text x="0125" y="0375">02</text>
+	<text x="0150" y="0375">03</text>
+	<text x="0175" y="0375">04</text>
+	<text x="0200" y="0375">05</text>
+	<text x="0225" y="0375">06</text>
+	<text x="0250" y="0375">07</text>
+	<text x="0275" y="0375">08</text>
+	<text x="0300" y="0375">09</text>
+	<text x="0325" y="0375">10</text>
+	<text x="0350" y="0375">11</text>
+	<text x="0375" y="0375">12</text>
+	<text x="0400" y="0375">13</text>
+	<text x="0425" y="0375">14</text>
+	<text x="0450" y="0375">15</text>
+	<text x="0475" y="0375">16</text>
+	<text x="0500" y="0375">17</text>
+	<text x="0525" y="0375">18</text>
+	<text x="0550" y="0375">19</text>
+	<text x="0575" y="0375">20</text>
     </g>
-    <g class='labels y-labels'>
-    <text x='0080' y='0055'>080</text>
-<text x='0080' y='0080'>070</text>
-<text x='0080' y='0105'>060</text>
-<text x='0080' y='0130'>050</text>
-<text x='0080' y='0155'>040</text>
-<text x='0080' y='0180'>030</text>
-<text x='0080' y='0205'>020</text>
-<text x='0080' y='0230'>010</text>
-<text x='0080' y='0255'>000</text>
-<text x='0080' y='0280'>-10</text>
-<text x='0080' y='0305'>-20</text>
-<text x='0080' y='0330'>-30</text>
+    <g class="labels y-labels">
+	<text x="0025" y="0055">100</text>
+	<text x="0025" y="0080">090</text>
+	<text x="0025" y="0105">080</text>
+	<text x="0025" y="0130">070</text>
+	<text x="0025" y="0155">060</text>
+	<text x="0025" y="0180">050</text>
+	<text x="0025" y="0205">040</text>
+	<text x="0025" y="0230">030</text>
+	<text x="0025" y="0255">020</text>
+	<text x="0025" y="0280">010</text>
+	<text x="0025" y="0305">000</text>
+	<text x="0025" y="0330">-10</text>
+	<text x="0025" y="0355">-20</text>
     </g>
   </svg>
-  <form method = 'get' action='file.txt'>
-    <p/>
-    <input name="SUB" value="Start Log" type="submit">
-    <input name="SUB" value="Stopp Log" type="submit">
-    <input name="OUT" type="radio" value="C">    <p/>
-    <select name='download' size='5' style='width: 300px'>
-      <option>0000.csv</option>
-<option>0001.csv</option>
-<option>0002.csv</option>
-<option>0003.csv</option>
-<option>0004.csv</option>
-<option>0005.csv</option>
-<option>0006.csv</option>
-<option>0007.csv</option>
-<option>0008.csv</option>
-<option>0009.csv</option>
-
-    </select>
-    <p/>
-    <input name="SUB" value="DownLoad" type="submit" >
-  </form>
+  </fieldset>
+  <form method = "get" action="file.txt">
+	<p/>
+	<fieldset name="logging">
+	    <legend>Logging</legend>
+	    <table style="width:100%">
+		  <tr>
+			<td>
+				<input name="START_LOG" value="Start Log" type="button" onclick="OnStartLog()">
+				<input name="STOPP_LOG" value="Stopp Log" type="button" onclick="OnStoppLog()">
+			</td>
+			<td>
+				<label>Interval[s]:</label>		
+				<input type="text" id="intervalInput" name="intervalInput" style="width: 50px"/>
+				<select id="intervalCombo" name="intervalCombo" onChange="IntervalComboOnChange(this, "intervalInput")">
+					<option value="1">1s</option>
+					<option value="60">1m</option>
+					<option value="600">10m</option>
+					<option value="3600">1h</option>
+				</select>    
+			</td> 
+			<td>			
+				<label>State:</label>	
+				<label id = "stateLabel"><font color="red"><b>Off</b></font></label>
+			</td>
+		  </tr> 
+		</table>
+	</fieldset>
+	<p/>
+	<fieldset name="files">
+		<legend>Files</legend>
+		<select name="download" size="5" style="width: 300px">
+			<option>0000.csv</option>
+			<option>0001.csv</option>
+			<option>0002.csv</option>
+			<option>0003.csv</option>
+			<option>0004.csv</option>
+			<option>0005.csv</option>
+			<option>0006.csv</option>
+			<option>0007.csv</option>
+			<option>0008.csv</option>
+			<option>0009.csv</option>
+		</select>
+		<p/>
+		<input name="refreshButton" value="Refresh" type="submit">
+		<input name="downloadButton" value="Download" type="submit">		
+	</fieldset>
+ 
 </body>
 </html>
